--- a/index.qmd
+++ b/index.qmd
@@ -7,3 +7,11 @@ To learn more about Quarto books visit <https://quarto.org/docs/books>.
 ```{r}
 1 + 1
 ```
+
+## One section
+
+blop
+
+## Another section
+
+pof
